--- a/package.json
+++ b/package.json
@@ -11,13 +11,20 @@
   "dependencies": {
     "@ai-sdk/openai": "^2.0.0-beta.5",
     "@ai-sdk/react": "^2.0.0-beta.9",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "ai": "^5.0.0-beta.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
+    "ollama-ai-provider": "^1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "rehype-highlight": "^7.0.2",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
